# hackaton_backend

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/: ERP_Equipes Airplus.xlsx  MES_Extraction.xlsx  PLM_DataSet.xlsx
src/: data_cleaning.ipynb  file.py  main.py  users.py
src/routers/: file.py  users.py
